docs: documentação da api atualizada.
